[gd_scene load_steps=12 format=2]

[ext_resource path="res://Entities/Asteroids/Asteroid.gd" type="Script" id=1]
[ext_resource path="res://Assets/Terrain:Powerups/asteroid.png" type="Texture" id=2]
[ext_resource path="res://Entities/Shared/Behaviors/ScreenWrapBehavior.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Effects/WhitePixel.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sounds/Asteroid/asteroid explosion.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 48.8649

[sub_resource type="Animation" id=2]
resource_name = "Rotate"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 30.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 110.0
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 5.0
scale = 5.0
scale_curve = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -0.379121, 0.0, 0, 0 ]

[node name="Asteroid" type="Area2D"]
gravity = 0.0
collision_layer = 32
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprites" type="Node2D" parent="."]
scale = Vector2( 0.18, 0.18 )

[node name="Sprite" type="Sprite" parent="Sprites"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Rotate"
playback_speed = 0.2
anims/Rotate = SubResource( 2 )

[node name="ScreenWrap" parent="." instance=ExtResource( 3 )]

[node name="DeathNodes" type="Node2D" parent="."]

[node name="DeathParticles" type="Particles2D" parent="DeathNodes"]
emitting = false
amount = 12
one_shot = true
explosiveness = 1.0
process_material = SubResource( 5 )
texture = ExtResource( 4 )

[node name="WaitAfterDeath" type="Timer" parent="DeathNodes"]

[node name="DeathParticles2" type="CPUParticles2D" parent="DeathNodes"]
visible = false
emitting = false
amount = 40
one_shot = true
explosiveness = 1.0
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 10.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
scale_amount = 2.0
scale_amount_curve = SubResource( 6 )

[node name="AsteroidDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -8.0

[connection signal="body_entered" from="." to="." method="_on_Asteroid_body_entered"]
[connection signal="timeout" from="DeathNodes/WaitAfterDeath" to="." method="_on_WaitAfterDeath_timeout"]
